<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/home_white_24dp"
        android:title="@string/bottom_navigation_menu_1"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/nav_favourites"
        android:enabled="true"
        android:checked="false"
        android:icon="@drawable/favorite_white_18dp"
        android:title="@string/bottom_navigation_menu_2"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/nav_profile"
        android:enabled="true"
        android:checked="false"
        android:icon="@drawable/person_white_24dp"
        android:title="@string/bottom_navigation_menu_3"
        app:showAsAction="ifRoom" />
</menu>