<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.BeforeLoginActivity">

        <ImageView
            android:id="@+id/front_logo"
            android:layout_width="176dp"
            android:layout_height="107dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo_front_page" />

        <Button
            android:id="@+id/front_connexion_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/front_login_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/front_logo" />

        <Button
            android:id="@+id/front_register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:text="@string/front_register_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/front_logo" />

        <TextView
            android:id="@+id/front_title1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/front_title"
            android:textSize="24dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/front_register_button" />

        <androidx.cardview.widget.CardView
            android:id="@+id/front_presentation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:ems="8"
            android:gravity="center_horizontal"
            android:inputType="textMultiLine"
            android:shadowColor="@color/blue_default"
            android:text="@string/front_presentation"
            android:textSize="14dp"
            app:layout_constraintTop_toBottomOf="@+id/front_title1" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/front_presentation"
                android:textSize="14dp"
                android:layout_margin="10dp"
                android:textAlignment="center"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/front_presentation">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/front_contact_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/front_contact_title"
                    android:textColor="@color/blue_default"
                    android:textSize="22dp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/front_contact_email_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="19dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/front_contact_title"
                    app:srcCompat="@drawable/mail_icon" />

                <TextView
                    android:id="@+id/front_contact_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/front_contact_email"
                    android:textSize="14dp"
                    app:layout_constraintStart_toEndOf="@+id/front_contact_email_icon"
                    app:layout_constraintTop_toBottomOf="@+id/front_contact_title" />

                <ImageView
                    android:id="@+id/front_contact_twitter_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="19dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/front_contact_email"
                    app:srcCompat="@drawable/twitter_icon" />

                <TextView
                    android:id="@+id/front_contact_twitter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/front_contact_twitter"
                    android:textSize="14dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/front_contact_twitter_icon"
                    app:layout_constraintTop_toBottomOf="@+id/front_contact_email" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/front_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/front_title2"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

        <ImageView
            android:id="@+id/front_number_visits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/front_title"
            app:srcCompat="@drawable/number_visits" />

        <ImageView
            android:id="@+id/front_number_satisfaction_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/front_number_visits"
            app:srcCompat="@drawable/number_satisfaction" />

        <ImageView
            android:id="@+id/front_circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/front_number_satisfaction_img"
            app:layout_constraintTop_toBottomOf="@+id/front_number_visits"
            app:srcCompat="@drawable/blue_circle" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>